<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/navigation_header"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="10dp">

    <TextView
        android:id="@+id/consumer_guide_text"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginBottom="1dp"
        android:background="@color/gray"
        android:padding="10dp"
        android:gravity="start|center"
        android:text="@string/consumer_guide"
        android:textColor="@android:color/white" />

    <TextView
        android:id="@+id/business_guide_text"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginBottom="1dp"
        android:background="@color/gray"
        android:padding="10dp"
        android:gravity="start|center"
        android:text="@string/business_activity_guide"
        android:textColor="@android:color/white" />

    <TextView
        android:id="@+id/suggestions_text"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginBottom="1dp"
        android:background="@color/gray"
        android:padding="10dp"
        android:gravity="start|center"
        android:text="@string/suggestions_amp_complaints"
        android:textColor="@android:color/white" />

    <TextView
        android:id="@+id/logout_text"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginBottom="1dp"
        android:background="@color/gray"
        android:padding="10dp"
        android:gravity="start|center"
        android:text="@string/logout"
        android:textColor="@android:color/white" />

    <TextView
        android:id="@+id/lang_text"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/gray"
        android:padding="10dp"
        android:gravity="start|center"
        android:text="@string/change_language"
        android:textColor="@android:color/white" />

</LinearLayout>