<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.zeowls.ajmanded.MainActivityFragment"
    tools:showIn="@layout/activity_main">

    <android.support.v4.view.ViewPager
        android:id="@+id/pager"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <!--<android.support.v4.view.PagerTabStrip-->
            <!--android:id="@+id/pager_header"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="50dp"-->
            <!--android:layout_gravity="top"-->
            <!--android:paddingBottom="4dp"-->
            <!--android:paddingTop="4dp"-->
            <!--android:textAppearance="@style/PagerTabStripText" />-->

    </android.support.v4.view.ViewPager>

    <com.zeowls.ajmanded.ui.spacetablayout.SpaceTabLayout
        android:id="@+id/pager_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_behavior="eu.long1.spacetablayout.SpaceTabLayoutBehavior"
        app:number_of_tabs="three"
        app:starting_position="three"
        app:tab_color="@color/colorPrimary"
        app:button_color="@color/colorPrimaryDark"
        app:text_color="@color/gray"

        app:icon_one="@drawable/ic_icn1"
        app:icon_two="@drawable/ic_icn2"
        app:icon_three="@drawable/ic_icn3"

        app:text_one="@string/online_services"
        app:text_two="@string/about_ded"
        app:text_three="@string/latest_news" />

</android.support.constraint.ConstraintLayout>

